Se creó con Colab

--- a/Unidad1/Practica4.ipynb
+++ b/Unidad1/Practica4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOgHB4K2A68Njj876fTZCaU",
+      "authorship_tag": "ABX9TyPH5Fu84B1Fkbml7esIRqvA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,8 +27,23 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Probabilidad y estadistica\n",
+        "## Unidad 1\n",
+        "**Practica 4. Diagramas de Cajas y bigotes**\n",
+        "\n",
+        "Facilitador: Dr. Jose Gabriel Rodriguez Rivas\n",
+        "\n",
+        "Alumno: Angel Alexander Rios Silva"
+      ],
+      "metadata": {
+        "id": "wvq9gGtSPAB_"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -73,7 +88,7 @@
         "id": "tQ7_CcTviAN7",
         "outputId": "cdc813d7-8e7d-45c7-953f-98deb343d5af"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -100,7 +115,7 @@
         "id": "eHnLY6P-iBbc",
         "outputId": "dafe0316-b29d-4741-e2b0-eeb301d302d8"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -132,7 +147,7 @@
         "id": "B6SAJg1fiCl3",
         "outputId": "6892a17f-e7f4-4bba-ec34-162674a23876"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -159,7 +174,7 @@
         "id": "mpVIP9jpiDnL",
         "outputId": "0d5c5ed3-e533-41c1-9e83-4bb7d12a512e"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -188,7 +203,7 @@
         "id": "yKh20EIEiEmZ",
         "outputId": "66285b30-1aeb-4228-d0f6-2d5ccce85d42"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -222,7 +237,7 @@
         "id": "UpAOV6zQiF_8",
         "outputId": "cf3febbc-0474-4f8a-f0bf-c9a42b4ab204"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
